# one

.github/: .gitignore  path-filters.py
.github/workflows/: checkhealth.yml  ci.yml  debian13-setup.mirror.yml  git-ln.build.yml  gitnu-c.yml  gitnu-rs.yml  gitnu.yml  helium.yml  kopiwm.build.yml  kopiwm.yml  loan-payoff-strategy.yml  make-rs.yml  os.json  rofi-pdf-search.yml  simple-tests.yml
code/: .rustfmt.toml
code/config/: attach.py
code/config/@/: crontab.sh
code/config/@/alacritty/: remove-vi_mode.patch
code/config/@/alatty/sessions/: basic.session
code/config/@/ghostty/: config.ghostty
code/config/@/htop/: htoprc
code/config/@/rofi/scripts/: pdf
code/config/@/vim/: full-vimrc
code/config/@/windows/: settings.json
code/config/@/xorg/: .xinitrc
code/config/nvim/colors/: gruvbox8_generated.vim
code/config/nvim/colors/color-gen/: output.vim
code/config/zsh/: .zshrc
code/docs/arch-linux/: setup-arch.md
code/docs/debian13-setup/: Cargo.toml  Makefile  readme.txt
code/docs/debian13-setup/src/: apt.rs  command.rs  dirs.rs  git.rs  main.rs  pins.rs  target.rs  utils.rs
code/docs/debian13-setup/src/targets/: .template  apt.rs  clangd.rs  disable_nouveau.rs  dwm.rs  firefox.rs  less.rs  ln.rs  micromamba.rs  minisign.rs  mod.rs  n.rs  neovim.rs  nvidia.rs  qmk.rs  yubikey.rs  zls.rs
code/docs/xorg/xhtml/: XTestQueryExtension.3.xhtml
code/experiments/my-bazel/: BUILD  MODULE.bazel  Makefile  README
code/experiments/my-bazel/bazel/: fast_float.BUILD  neovim.BUILD
code/museum/: print-colors.sh
code/tools/all-git-status/: ags
code/tools/canvas-sync-cli/src/: api.rs  config.rs  main.rs  string.rs  sync.rs  traits.rs  types.rs
code/tools/diff-rs/: Cargo.toml  Makefile
code/tools/diff-rs/src/: cli.rs  main.rs
code/tools/draw-rs/: Cargo.toml
code/tools/git-checkout2/: CMakeLists.txt
code/tools/gitlab-api/: README.txt
code/tools/gitnu/c/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cache.c  cache.h  config.h  debug.h  log.c  log.h  main.c  state.c  state.h  util.c  util.h
code/tools/gitnu/c++/: .clang-format  .gitignore  CMakeLists.txt  Makefile  gen_cmd.py  sandbox.sh
code/tools/gitnu/c++/src/: git_cmd.cpp  git_cmd.h  main.cpp
code/tools/gitnu/c/cmake/: Commands.mk  setup_commands.py
code/tools/gitnu/c/test/: main.cpp  parse-args.cpp
code/tools/gitnu/rust/: CONTRIBUTING.md  Cargo.toml  README.md
code/tools/gitnu/rust/src/: cache.rs  git.rs  git_cmd.rs  parse.rs  prelude.rs  status.rs  tests.rs
code/tools/kopiwm/: LICENSE  Makefile  README  build.zig  build.zig.zon
code/tools/kopiwm/scripts/: .xinitrc  tutorial.py
code/tools/kopiwm/src/: app.zig  atoms.zig  c_lib.zig  client.zig  config.zig  config_defaults.zig  drw.zig  enum_array.zig  enums.zig  errors.zig  fstr.zig  layout.zig  lazy_fn.zig  logger.zig  main.zig  monitor.zig  rect.zig  toggle.zig  x_tutorial.zig
code/tools/libgit2-zig/: README.md  build.zig  build.zig.zon
code/tools/ln/.github/workflows/: build.yml
code/tools/ln/rust/src/: main.rs
code/tools/loan-payoff-strategy/: Makefile  README.txt  chart.html  go.mod  go.sum
code/tools/loan-payoff-strategy/lib/: colors.go  contract.go  types.go
code/tools/make-rs/: Cargo.toml  README.txt
code/tools/make-rs/src/: consts.rs  debug_tools.rs  git.rs  main.rs
code/tools/make-rs/src/enums/: mod.rs
code/tools/numerical-methods/: Cargo.toml  Makefile  README.md
code/tools/numerical-methods/matlab/: Makefile  main.m
code/tools/numerical-methods/matlab/+matrix/: random_symmetric_positive_definite.m  random_tridiagonal.m  to_lower_band.m  to_lower_triangular.m  to_upper_band.m  to_upper_triangular.m
code/tools/numerical-methods/matlab/+na/: cholesky.m  givens_rotations.m  gram_schmidt.m  gram_schmidt_normalized.m  horners_method.m  householder.m
code/tools/numerical-methods/matlab/+random/: positive_definite.m  symmetric.m  symmetric_positive_definite.m  tridiagonal.m
code/tools/numerical-methods/matlab/+vec/: project.m
code/tools/numerical-methods/src/: assert.rs  main.rs  prelude.rs
code/tools/numerical-methods/src/interpolation/: lagrange.rs  mod.rs  newton.rs  traits.rs
code/tools/numerical-methods/src/matrix/: algebra.rs  column_methods.rs  core_traits.rs  mod.rs  scalar_traits.rs  square_matrix.rs
code/tools/numerical-methods/src/na/: mod.rs  qr_decomp.rs
code/tools/paper/: .gitignore  Makefile  README.md
code/tools/paper/Paper/: AppDelegate.swift  SceneDelegate.swift
code/tools/paper/Paper.xcodeproj/: project.pbxproj
code/tools/paper/Paper/Base.lproj/: Main.storyboard
code/tools/paper/Paper/Utils/: Constants.swift  Extensions.swift  Line.swift  Logger.swift  Tailwind.swift  Theme.swift
code/tools/paper/Paper/View Controllers/: PageViewController.swift  ViewController+.swift  ViewController.swift
code/tools/paper/Paper/Views/: DeskView.swift  DocumentView.swift  PageView.swift  ScrollView.swift  UIView+.swift
code/tools/paper/docs/: LSP.md
code/tools/rofi-pdf-search/: Cargo.toml  Makefile  launcher.sh
code/tools/rofi-pdf-search/src/: main.rs
code/tools/rsync-helper/: README.txt
code/tools/stats-calc/core/: display.rs  inverse.rs  main.rs
code/tools/stats-calc/core/data_set/: data.rs  mod.rs
code/tools/stats-calc/core/distributions/: binomial.rs  chi_squared.rs  exponential.rs  fisher_snedecor.rs  geometric.rs  negatve_binomial.rs  normal.rs  poisson.rs  students_t.rs  uniform.rs
code/tools/stats-calc/interactive/src/: main.rs
code/tools/stats-calc/tests/: test.rs
code/tools/t-runner/: Makefile
code/tools/wacom-macos-precision-mode-daemon/heliumd/: Overlay.swift
code/tools/wacom-macos-precision-mode-daemon/heliumd/Wacom/: NSAppleEventDescriptorHelperCategory.m  TabletAEDictionary.h  WacomTabletDriver.h  WacomTabletDriver.m
code/tools/wacom-macos-precision-mode-gui/: Makefile
code/tools/wacom-macos-precision-mode-gui/Helium/: Helium.swift
code/web/site/public/: debian.mk  linux.txt
health/: Cargo.toml
health/src/: main.rs  trim_whitespaces.rs
health/src/workflow/: mod.rs
(+2 files in other folders)
