[package]
name = "monorepo-checkhealth"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = {
  git = "https://github.com/rust-lang-nursery/lazy-static.rs",
  rev = "be7c1c43f264699f956b70ce8e29941bd1e61bde", # 1.5.0
}
walkdir =  {
  git = "https://github.com/BurntSushi/walkdir",
  rev = "4f26be4d450910916ea11533b2efc52b9a6483bc" # 2.5.0
}
ignore = {
  git = "https://github.com/BurntSushi/ripgrep",
  rev = "82313cf95849bfe425109ad9506a52154879b1b1" # no tag
}
yaml-rust2 = {
  git = "https://github.com/ethiraric/yaml-rust2",
  rev = "9f39918876ebbba529b46cf3e27df0eb1f5c47d8", # no tag
}
