[package]
name = "gitnu"
version = "0.7.8"
authors = ["Nguyen Vu Khang <brew4k@gmail.com>"]
description = """
gitnu indexes your git status so you can use numbers instead of filenames.
"""
homepage = "https://github.com/uint2/mono/tree/main/code/tools/gitnu/rust"
repository = "https://github.com/uint2/mono/tree/main/code/tools/gitnu/rust"
documentation = "https://github.com/uint2/mono/tree/main/code/tools/gitnu/rust"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "MIT"
autotests = false
edition = "2024"

[[bin]]
bench = false
doctest = false
path = "src/main.rs"
name = "git-nu"
